--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.udacity.sandwichclub.DetailActivity">
+    tools:context="com.udacity.sandwichclub.DetailActivity"
+    android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    >
 
     <ImageView
         android:id="@+id/image_iv"
@@ -33,19 +38,15 @@
 
     <TextView
         android:id="@+id/also_known_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.683"
-        app:layout_constraintStart_toEndOf="@+id/also_known_as_label"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/also_known_as_label"
-        tools:text="The food is also knon as mbingo chobi and it is very good food which you can try out" />
-
+        />
     <TextView
         android:id="@+id/place_of_origin_label"
         android:layout_width="wrap_content"
@@ -62,11 +63,11 @@
         android:id="@+id/origin_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginStart="6dp"
         app:layout_constraintBaseline_toBaselineOf="@id/place_of_origin_label"
         app:layout_constraintStart_toEndOf="@+id/place_of_origin_label"
-        tools:text="New found land" />
+        />
 
     <TextView
         android:id="@+id/ingredients_label"
@@ -79,16 +80,20 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/place_of_origin_label"
-        tools:text="Meat" />
+        />
 
     <TextView
         android:id="@+id/ingredients_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="32dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/also_known_tv"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ingredients_label"
         tools:text="Meat,rice,beans,anybalalajhdkkkdkdkkdkkddkkdkkdkkdkkdkkdkdkkdkkkkdkkdkkdkkdkdkkkkkkkkkkkkkkkkkkkkkkkkkkk" />
 
@@ -96,8 +101,8 @@
         android:id="@+id/description_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="18dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:text="@string/detail_description_label"
         android:textStyle="bold"
@@ -106,10 +111,11 @@
 
     <TextView
         android:id="@+id/description_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
+        android:lineSpacingMultiplier="1.2"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
@@ -117,3 +123,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description_label" />
 </android.support.constraint.ConstraintLayout>
+</ScrollView>
